Sun Oct 28 08:23:16 2012  Koichi Sasada  <ko1@atdot.net>

	* bignum.c (bignew_1): Bignum instances are frozen.
	  Feature #3222

	* include/ruby/ruby.h: Fixnum instances are also frozen.

	* class.c (singleton_class_of): check Bignum before
	  singleton cheking.

	* test/ruby/test_bignum.rb: add a test.

	* test/ruby/test_fixnum.rb: ditto.

	* test/ruby/marshaltestlib.rb, test/ruby/test_eval.rb,
	  test/ruby/test_object.rb: catch up above changes.

Sun Oct 28 04:38:06 2012  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_define_method): remove type and frozen checking.
	  Checking is done in `rb_singleton_class()'.

Sun Oct 28 00:49:06 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (assign_in_cond): warn for static content object asignments
	  in conditional statements.  [ruby-dev:43083] [Feature #4299]

Sat Oct 27 23:33:41 2012  Benoit Daloze  <eregontp@gmail.com>

	* gc.c (gc_profile_result, gc_profile_report): use internal structures
	  to avoid allocations and progressively print the output for #report.

Sat Oct 27 11:01:10 2012  Koichi Sasada  <ko1@atdot.net>

	* numeric.c (rb_float_new_in_heap), include/ruby/ruby.h: 
	  make all Float objects frozen.
	  [ruby-dev:46081] [ruby-trunk - Feature #6936]
	  Most part of patch by NARUSE, Yui  <naruse@ruby-lang.org>.

	* class.c (singleton_class_of): raise TypeError when
	  trying to define a singleton method on Float objects.

	* vm.c (vm_define_method): ditto.

	* test/ruby/marshaltestlib.rb: catch up above changes.

	* test/ruby/test_class.rb: ditto.

	* test/test_pp.rb: ditto.

Sat Oct 27 10:50:53 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* object.c (rb_mod_const_get): make sure the constant name is
	  converted to a string before searching. [ruby-core:48405]

Sat Oct 27 10:12:13 2012  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* iseq.c (rb_iseq_compile_with_option): Instead of testing
	  respond_to, just check if the argument is actually a file,