@@ -1,3 +1,10 @@
+Sun Oct 28 10:05:03 2012  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/lib/psych/visitors/yaml_tree.rb: YAML Tree object should
+	  be able to take an emitter object as it's output.
+
+	* test/psych/visitors/test_yaml_tree.rb: related test.
+
 Sun Oct 28 08:23:16 2012  Koichi Sasada  <ko1@atdot.net>
 
 	* bignum.c (bignew_1): Bignum instances are frozen.
